--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="author" content="">
     <link rel="icon" href="./image/man.jpeg">
 
-    <title>Hai Ye's Homepage</title>
+    <title>Ningyu Zhang's Homepage</title>
 
     <!-- Bootstrap core CSS -->
     <link href="style/bootstrap.min.css" rel="stylesheet">
