--- a/index.html
+++ b/index.html
@@ -42,13 +42,12 @@
          <h1> Ningyu Zhang <span style="font-family:STFangsong; font-size:18pt"> (张宁豫)</span>  </h1>
         <br>
         <p>
-        Hi! I am Ningyu Zhang ( [,etʃ e 'aɪ] ). I am an artificial intelligence researcher  in <a href = 'http://zhejianglab.com/'>Zhejiang Lab </a>.</p>  
-
-        <p>I got my Ph.D in College of Computer Science in Zhejiang University, with the supervision of Prof. <a href = 'http://mypage.zju.edu.cn/huajun'>Huajun Chen</a>.
+        Hi! I am Ningyu Zhang. I am an artificial intelligence researcher  in <a href = 'http://zhejianglab.com/'>Zhejiang Lab </a>.  
+          I got my Ph.D in College of Computer Science in Zhejiang University, with the supervision of Prof. <a href = 'http://mypage.zju.edu.cn/huajun'>Huajun Chen</a>.
          And I obtained my bachelor degree from the College  of Software Engineering  of 
           Zhejiang University in July 2012. 
         </p>
-      <p>My research interests mainly lie in Machine Learning,  Natural Language Processing, Knowledge Graph and Cross-media Intelligence e.g. 
+      <p>My research interests mainly lie in Machine Learning,  Natural Language Processing, Knowledge Graph and Cross-media Intelligence. 
       
       </p>
       <p>Email: { zhangningyu16900 [at] vip [dot] qq [dot] com }</p>
