--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@ for Relation Extractionn</li>
      
         </p>
 		    <p>
+           <li>Transfer Learning for Urban Computing: A Case Study for Optimal Retail Store Placement</li>
+          <b>Ningyu Zhang</b>, Huajun  Chen, Xi Chen</br>
+         <span style="font-style: italic;">The 4th International Workshop on Urban Computing of KDD </span>, 2015 <br/>
+     
+        </p>
+			    <p>
            <li>ELM meets urban computing: ensemble urban data for smart city application</li>
           <b>Ningyu Zhang</b>, Huajun  Chen, Xi Chen, Jiaoyan Chen</br>
           In  <span style="font-style: italic;">Proceedings of ELM-2015</span> , 2015. <br/>
