--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
          <h1> Ningyu Zhang <span style="font-family:STFangsong; font-size:18pt"> (张宁豫)</span>  </h1>
         <br>
         <p>
-        Hi! I am Ningyu Zhang. I am an artificial intelligence researcher  in <a href = 'http://zhejianglab.com/'>Zhejiang Lab </a>.  
-          I got my Ph.D in College of Computer Science in Zhejiang University, with the supervision of Prof. <a href = 'http://mypage.zju.edu.cn/huajun'>Huajun Chen</a>.
+        Hi! I am Ningyu Zhang. I am an senior artificial intelligence researcher  at <a href = 'http://zhejianglab.com/'>Zhejiang Lab </a>.  
+          I got my Ph.D in College of Computer Science in <a href='http://www.cs.zju.edu.cn/'>Zhejiang University</a>, with the supervision of Prof. <a href = 'http://mypage.zju.edu.cn/huajun'>Huajun Chen</a>.
          And I obtained my bachelor degree from the College  of Software Engineering  of 
           Zhejiang University in July 2012. 
         </p>
