--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ for Relation Extractionn</li>
 
       <hr style = "clear:both"/>
       <h3>Miscellany</h3>
-      <p><li><b>My favorite hobby</b>: Music, listen and sing songs.</li></p>
+      <p><li><b>My favorite hobby</b>: Tourism.</li></p>
  
       <hr style = "clear:both"/>
       <p> Last update: 2018.8.25 <a href="https://clustrmaps.com/site/1aced" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=IUYIBEXGynDyTCGAO3NmHNprFGimbDTa7Yxo6qWn1Yc&cl=ffffff" width="20px"></a></p>
