--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <h3><font color = 'black'>Publications</font></h3>
       <!--<h4>Conference papers:</h4>-->
         <p>
-          <li> Attention-Based Capsule Network with Dynamic Routing
+          <li> Attention-Based Capsule Networks with Dynamic Routing
 for Relation Extractionn</li>
           <b>Ningyu Zhang</b>, Shumin Deng, Zhanlin Sun, Xi Chen, Wei Zhang, Huajun Chen</br>
           In <span style="font-style: italic;">Proceedings of the Conference on Empirical Methods in Natural Language Processing</span> (EMNLP), 2018. <br/>
