--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="col-sm-3">
             <br>
             <div align="center">
-            <img class="img-responsive" src="./image/zny.jpg" width="220">
+            <img class="img-responsive" src="./image/zny.jpg" width="220" height="100">
             <br>
             <a href="https://scholar.google.co.jp/citations?user=xQDOPvsAAAAJ&hl=en&oi=ao"> [Google Scholar] </a> <br> <a href=https://dblp.uni-trier.de/pers/hd/z/Zhang:Ningyu> [DBLP] </a> <br> <a href="https://github.com/zxlzr"> [Github] </a> <br>  <a href = "cv/cv.pdf"> [CV] </a> 
 
