--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <p>
           <li> Attention-Based Capsule Networks with Dynamic Routing
-for Relation Extractionn</li>
+for Relation Extraction</li>
           <b>Ningyu Zhang</b>, Shumin Deng, Zhanlin Sun, Xi Chen, Wei Zhang, Huajun Chen</br>
           In <span style="font-style: italic;">Proceedings of the Conference on Empirical Methods in Natural Language Processing</span> (EMNLP), 2018. <br/>
         </p>
