--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@ for Relation Extraction</li>
       <hr style = "clear:both"/>
       <h3>Work Experience</h3>
       <p>
-        <li>2018.1 - : Artificial intelligence researcher  in Zhejiang Lab, Hangzhou, China </li>	
+        <li>2019.2 - : Senior Algorithmic Engineer at Alibaba Group, Hangzhou, China </li> 
+        <li>2018.1 - 2019.2: Artificial intelligence researcher  in Zhejiang Lab, Hangzhou, China </li>	
       </p>
  <hr style = "clear:both"/>
       <h3>Service</h3>
