--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
       <hr style="clear:both"/>
       <h3><font color = 'black'>Publications</font></h3>
       <!--<h4>Conference papers:</h4>-->
-
+        <p>
+          <li> Long-tail Relation Extraction via  Knowledge Graph Embeddings and Graph  Convolution  Networks</li>
+          <b>Ningyu Zhang</b>, Shumin Deng, Zhanlin Sun, Guanying Wang, Xi Chen, Wei Zhang, Huajun Chen</br>
+          In <span style="font-style: italic;">Proceedings of the Annual Conference of the North American Chapter of the Association for Computational Linguistics</span> (NAACL), 2019. <br/>
+        </p>
         <p>
           <li> Attention-Based Capsule Networks with Dynamic Routing
 for Relation Extraction</li>
