--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
           <b>Ningyu Zhang</b>, Shumin Deng, Zhanlin Sun, Guanying Wang, Xi Chen, Wei Zhang, Huajun Chen</br>
           In <span style="font-style: italic;">Proceedings of the Annual Conference of the North American Chapter of the Association for Computational Linguistics</span> (NAACL), 2019. <br/>
         </p>
+            <p>
+          <li> Knowledge-Driven Stock Trend Prediction and Explanation with Concept Drift</li>
+          Shumin Deng,<b> Ningyu Zhang</b>, Jiaoyan Chen, Huajun Chen, Jeff Z. Pan, Wei Zhang</br>
+          In <span style="font-style: italic;">WWW Workshop on Knowledge Graph Techology and Applications</span> (WWW), 2019. <br/>
+        </p>
+        <p>
         <p>
           <li> Attention-Based Capsule Networks with Dynamic Routing
 for Relation Extraction</li>
