--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p>
           <li> Knowledge-Driven Stock Trend Prediction and Explanation with Concept Drift</li>
           Shumin Deng,<b> Ningyu Zhang</b>, Jiaoyan Chen, Huajun Chen, Jeff Z. Pan, Wei Zhang</br>
-          In <span style="font-style: italic;">WWW Workshop on Knowledge Graph Techology and Applications</span> (WWW), 2019. <br/>
+          In <span style="font-style: italic;">Proceedings of WWW Workshop on Knowledge Graph Techology and Applications</span> (WWW), 2019. <br/>
         </p>
         <p>
         <p>
