--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
       <h3><font color = 'black'>Publications</font></h3>
       <!--<h4>Conference papers:</h4>-->
         <p>
+          <li> </li>
+          Qianghuai Jia, <b>Ningyu Zhang</b>, Nengwei Hua</br>
+          In <span style="font-style: italic;">Proceedings of CIKM workshop on Entity Retrival </span> (CIKM), 2019. <br/>
+        </p>
+        <p>
           <li> Long-tail Relation Extraction via  Knowledge Graph Embeddings and Graph  Convolution  Networks</li>
           <b>Ningyu Zhang</b>, Shumin Deng, Zhanlin Sun, Guanying Wang, Xi Chen, Wei Zhang, Huajun Chen</br>
           In <span style="font-style: italic;">Proceedings of the Annual Conference of the North American Chapter of the Association for Computational Linguistics</span> (NAACL), 2019. <br/>
