--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <h3><font color = 'black'>Publications</font></h3>
       <!--<h4>Conference papers:</h4>-->
         <p>
-          <li> </li>
+          <li>Context-aware Deep Model for Entity Recommendation in Search Engine at Alibaba  </li>
           Qianghuai Jia, <b>Ningyu Zhang</b>, Nengwei Hua</br>
           In <span style="font-style: italic;">Proceedings of CIKM workshop on Entity Retrival </span> (CIKM), 2019. <br/>
         </p>
