--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
       <h3><font color = 'black'>Publications</font></h3>
       <!--<h4>Conference papers:</h4>-->
         <p>
+          <li>Meta-Learning with Dynamic-Memory-Based Prototypical Network for Few-shot Event Detection  </li>
+          Shumin Deng, <b>Ningyu Zhang</b>, Jiaojian Kang, Yichi Zhang, Wei Zhang, Huajun Chen</br>
+          In <span style="font-style: italic;">Proceedings ofi13th ACM International WSDM Conference</span> (WSDM), 2020. <br/>
+        </p>
+        <p>
           <li>Context-aware Deep Model for Entity Recommendation in Search Engine at Alibaba  </li>
           Qianghuai Jia, <b>Ningyu Zhang</b>, Nengwei Hua</br>
           In <span style="font-style: italic;">Proceedings of CIKM workshop on Entity Retrival </span> (CIKM), 2019. <br/>
