--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p>
           <li>Meta-Learning with Dynamic-Memory-Based Prototypical Network for Few-shot Event Detection  </li>
           Shumin Deng, <b>Ningyu Zhang</b>, Jiaojian Kang, Yichi Zhang, Wei Zhang, Huajun Chen</br>
-          In <span style="font-style: italic;">Proceedings ofi13th ACM International WSDM Conference</span> (WSDM), 2020. <br/>
+          In <span style="font-style: italic;">Proceedings of 13th ACM International WSDM Conference</span> (WSDM), 2020. <br/>
         </p>
         <p>
           <li>Context-aware Deep Model for Entity Recommendation in Search Engine at Alibaba  </li>
