--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@ for Relation Extraction</li>
       <h3>Service</h3>
       <p>
         <li>Reviewer:  Big Data Research </li>
+        <li>Reviewer:  IEEE Access </li>
+        <li>Member of Programme Committe of  the 2nd International Workshop on EntitY REtrieval at CIKM </li>
       </p>
       
 
