--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
       <h3><font color = 'black'>Publications</font></h3>
       <!--<h4>Conference papers:</h4>-->
         <p>
+          <li>When Low Resource NLP Meets Unsupervised Language Model: Meta-pretraining Then Meta-learning for Few-shot Text Classification </li>
+          Shumin Deng, <b>Ningyu Zhang</b>, Zhanlin Sun, Jiaoyan Chen,  Huajun Chen</br>
+          In <span style="font-style: italic;">Proceedings of 34th AAAI Conference</span> (AAAI), 2020. <br/>
+        </p>
+        <p>
           <li>Meta-Learning with Dynamic-Memory-Based Prototypical Network for Few-shot Event Detection  </li>
           Shumin Deng, <b>Ningyu Zhang</b>, Jiaojian Kang, Yichi Zhang, Wei Zhang, Huajun Chen</br>
           In <span style="font-style: italic;">Proceedings of 13th ACM International WSDM Conference</span> (WSDM), 2020. <br/>
