--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
       <h3><font color = 'black'>Publications</font></h3>
       <!--<h4>Conference papers:</h4>-->
         <p>
+          <li>Relation Adversarial Network for Low Resource KnowledgeGraph Completion </li>
+          <b>Ningyu Zhang</b>, Shumin Deng, Zhanlin Sun, Jiaoyan Chen, Wei Zhang, Huajun Chen</br>
+          In <span style="font-style: italic;">Proceedings of the Web Conference</span> (WWW), 2020. <br/>
+        </p>
+        <p>
           <li>Conceptualized Representation Learning  for Chinese Biomedical Text Mining </li>
           <b>Ningyu Zhang</b>, Qianghuai Jia, Kangping Yin, Liang Dong, Feng Gao, Nengwei Hua </br>
           In <span style="font-style: italic;">Proceedings of 13th ACM International WSDM Conference</span> (WSDM), 2020. <br/>
