--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
          And I obtained my bachelor degree from the College  of Software Engineering  of 
           Zhejiang University in July 2012. 
         </p>
-      <p>My research interests mainly lie in Machine Learning,  Natural Language Processing, Knowledge Graph and Cross-media Intelligence. 
+      <p>My research interests mainly lie in Machine Learning,  Natural Language Processing, Knowledge Graph and Information Retrival. 
       
       </p>
       <p>Email: { zhangningyu16900 [at] vip [dot] qq [dot] com }</p>
