--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
          <h1> Ningyu Zhang <span style="font-family:STFangsong; font-size:18pt"> (张宁豫)</span>  </h1>
         <br>
         <p>
-        Hi! I am Ningyu Zhang. I am an Senior Algorithmic Engineer at <a href = 'https://www.alibabagroup.com'>Alibaba Group</a>.  
+        Hi! I am Ningyu Zhang. I am a researcher at <a href = 'https://www.alibabagroup.com'>Alibaba Group</a>.  
           I got my Ph.D in College of Computer Science in <a href='http://www.cs.zju.edu.cn/'>Zhejiang University</a>, with the supervision of Prof. <a href = 'http://mypage.zju.edu.cn/huajun'>Huajun Chen</a>.
          And I obtained my bachelor degree from the College  of Software Engineering  of 
-          Zhejiang University in July 2012. 
+          Zhejiang University. 
         </p>
-      <p>My research interests mainly lie in Machine Learning,  Natural Language Processing, Knowledge Graph and Information Retrival. 
+      <p>My research interests mainly lie in Machine Learning,  Natural Language Processing, and Knowledge Graph. 
       
       </p>
       <p>Email: { zhangningyu16900 [at] vip [dot] qq [dot] com }</p>
