--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p>
           <li>Relation Adversarial Network for Low Resource KnowledgeGraph Completion </li>
           <b>Ningyu Zhang</b>, Shumin Deng, Zhanlin Sun, Jiaoyan Chen, Wei Zhang, Huajun Chen</br>
-          In <span style="font-style: italic;">Proceedings of the Web Conference</span> (WWW), 2020. <br/>
+        In <span style="font-style: italic;">Proceedings of the Web Conference</span> (WWW), 2020. <a href=''>[Paper]</a><br/>
         </p>
         <p>
           <li>Conceptualized Representation Learning  for Chinese Biomedical Text Mining </li>
