--- a/index.html
+++ b/index.html
@@ -240,15 +240,13 @@ for Relation Extraction</li>
       <hr style = "clear:both"/>
       <h3>Work Experience</h3>
       <p>
-        <li>2019.2 - : Senior Algorithmic Engineer at Alibaba Group, Hangzhou, China </li> 
+        <li>2019.2 - 2020.5: Senior Algorithmic Engineer at Alibaba Group, Hangzhou, China </li> 
         <li>2018.1 - 2019.2: Artificial intelligence researcher  in Zhejiang Lab, Hangzhou, China </li>	
       </p>
  <hr style = "clear:both"/>
       <h3>Service</h3>
       <p>
-        <li>Reviewer:  Big Data Research </li>
-        <li>Reviewer:  CIKM </li>
-        <li>Member of Programme Committe of  the 2nd International Workshop on EntitY REtrieval at CIKM </li>
+        <li>PC:  Big Data Research, IEEE Access, EYRE@CIKM2019, EYRE@2020, EMNLP2020, Neurips2020, AACL2020, CCKS2020</li>
       </p>
       
 
