--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          <h1> Ningyu Zhang <span style="font-family:STFangsong; font-size:18pt"> (张宁豫)</span>  </h1>
         <br>
         <p>
-        Hi! I am Ningyu Zhang. I am a researcher at <a href = 'https://www.alibabagroup.com'>Alibaba Group</a>.  
+        Hi! I am Ningyu Zhang. I am a Assistant Professor  at Zhejiang University.  
           I got my Ph.D in College of Computer Science in <a href='http://www.cs.zju.edu.cn/'>Zhejiang University</a>, with the supervision of Prof. <a href = 'http://mypage.zju.edu.cn/huajun'>Huajun Chen</a>.
          And I obtained my bachelor degree from the College  of Software Engineering  of 
           Zhejiang University. 
