--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ for Relation Extraction</li>
  <hr style = "clear:both"/>
       <h3>Service</h3>
       <p>
-        <li>PC:  Big Data Research, IEEE Access, EYRE@CIKM2019, EYRE@2020, EMNLP2020, Neurips2020, AACL2020, CCKS2020</li>
+        <li>PC:  Big Data Research, IEEE Access, EYRE@CIKM2019, EYRE@CIKM2020, EMNLP2020, Neurips2020, AACL2020, CCKS2020</li>
       </p>
       
 
