--- a/index.html
+++ b/index.html
@@ -68,7 +68,17 @@
       <h3><font color = 'black'>Publications</font></h3>
       <!--<h4>Conference papers:</h4>-->
         <p>
-          <li>Relation Adversarial Network for Low Resource KnowledgeGraph Completion </li>
+          <li>Summarizing Chinese  Medical Answer with Graph Convolution Networks and Question-focused Dual Attention </li>
+          <b>Ningyu Zhang</b>, Shumin Deng, Juan Li, Xi Chen, Wei Zhang, Huajun Chen</br>
+        In <span style="font-style: italic;">Findings of EMNLP</span> (EMNLP), 2020. <a href=''>[Paper]</a><br/>
+        </p>
+        <p>
+          <li>Summarizing Chinese  Medical Answer with Graph Convolution Networks and Question-focused Dual Attention </li>
+          <b>Ningyu Zhang</b>, Shumin Deng, Zhen Bi, Haiyang Yu, Jiacheng Yang, Mosha Chen, Fei Huang, Wei Zhang, Huajun Chen</br>
+        In <span style="font-style: italic;">Proceddings of the Conference on Empirical Methods in Natural Language Processing</span> (EMNLP demo), 2020. <a href=''>[Paper]</a><br/>
+        </p>
+        <p>
+          <li>Relation Adversarial Network for Low Resource Knowledge Graph Completion </li>
           <b>Ningyu Zhang</b>, Shumin Deng, Zhanlin Sun, Jiaoyan Chen, Wei Zhang, Huajun Chen</br>
         In <span style="font-style: italic;">Proceedings of the Web Conference</span> (WWW), 2020. <a href='https://arxiv.org/pdf/1911.03091.pdf'>[Paper]</a><br/>
         </p>
