--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         In <span style="font-style: italic;">Findings of EMNLP</span> (EMNLP), 2020. <a href=''>[Paper]</a><br/>
         </p>
         <p>
-          <li>Summarizing Chinese  Medical Answer with Graph Convolution Networks and Question-focused Dual Attention </li>
+          <li>OpenUE: An Open Toolkit of Universal  Extraction from Text</li>
           <b>Ningyu Zhang</b>, Shumin Deng, Zhen Bi, Haiyang Yu, Jiacheng Yang, Mosha Chen, Fei Huang, Wei Zhang, Huajun Chen</br>
         In <span style="font-style: italic;">Proceddings of the Conference on Empirical Methods in Natural Language Processing</span> (EMNLP demo), 2020. <a href=''>[Paper]</a><br/>
         </p>
@@ -230,7 +230,7 @@ for Relation Extraction</li>
       <p><li><b>My favorite hobby</b>: Tourism.</li></p>
  
       <hr style = "clear:both"/>
-      <p> Last update: 2018.8.25 <a href="https://clustrmaps.com/site/1aced" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=IUYIBEXGynDyTCGAO3NmHNprFGimbDTa7Yxo6qWn1Yc&cl=ffffff" width="20px"></a></p>
+      <p> Last update: 2020.09.17 <a href="https://clustrmaps.com/site/1aced" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=IUYIBEXGynDyTCGAO3NmHNprFGimbDTa7Yxo6qWn1Yc&cl=ffffff" width="20px"></a></p>
     </div> <!-- /container -->
 
   </body>
