--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
       <h3><font color = 'black'>Publications</font></h3>
       <!--<h4>Conference papers:</h4>-->
         <p>
+          <li>Bridging Text and Knowledge with Multi-Prototype Embedding for Few-Shot Relational Triple Extraction</li>
+          Haiyang Yu, <b>Ningyu Zhang</b>, Shumin Deng, Hongbin Ye, Wei Zhang, Huajun Chen</br>
+        In <span style="font-style: italic;">The 28th International Conference on Computational Linguistics</span> (COLING), 2020. <a href=''>[Paper]</a><br/>
+        </p>
+        <p>
+          <li>Logic-guided Semantic Representation Learning for Zero-Shot Relation Classification</li>
+          Juan Li, Ruoxu Wang, <b>Ningyu Zhang</b>, Wen Zhang, Fan Yang, Huajun Chen</br>
+        In <span style="font-style: italic;">The 28th International Conference on Computational Linguistics</span> (COLING), 2020. <a href=''>[Paper]</a><br/>
+        </p>
+        <p>
           <li>Summarizing Chinese  Medical Answer with Graph Convolution Networks and Question-focused Dual Attention </li>
           <b>Ningyu Zhang</b>, Shumin Deng, Juan Li, Xi Chen, Wei Zhang, Huajun Chen</br>
         In <span style="font-style: italic;">Findings of EMNLP</span> (EMNLP), 2020. <a href=''>[Paper]</a><br/>
