--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ for Relation Extraction</li>
  <hr style = "clear:both"/>
       <h3>Service</h3>
       <p>
-        <li>PC: EYRE@CIKM(2019,2020), EMNLP(2020), Neurips(2020), ICLR(2021), AAAI(2021), AACL(2020), CCKS(2020)</li>
+        <li>PC: EYRE@CIKM(2019,2020), EMNLP(2020), Neurips(2020), ICLR(2021), AAAI(2021), NAACL(2021), AACL(2020), CCKS(2020)</li>
         <li>Reviewer:Big Data Research</li>
       </p>
       
