--- a/index.html
+++ b/index.html
@@ -68,24 +68,29 @@
       <h3><font color = 'black'>Publications</font></h3>
       <!--<h4>Conference papers:</h4>-->
         <p>
+          <li>Contrastive Triple Extraction with Generative Transformer</li>
+          Hongbin Ye, <b>Ningyu Zhang</b>, Shumin Deng, Mosha Chen, Chaunqi Tan, Fei Huang, Huajun Chen</br>
+        In <span style="font-style: italic;">The 35th AAAI Conference on Artificial Intelligence</span> (AAAI), 2021. <a href='https://arxiv.org/pdf/2009.06207.pdf'>[Paper]</a><br/>
+        </p>
+        <p>
           <li>Bridging Text and Knowledge with Multi-Prototype Embedding for Few-Shot Relational Triple Extraction</li>
           Haiyang Yu, <b>Ningyu Zhang</b>, Shumin Deng, Hongbin Ye, Wei Zhang, Huajun Chen</br>
-        In <span style="font-style: italic;">The 28th International Conference on Computational Linguistics</span> (COLING), 2020. <a href=''>[Paper]</a><br/>
+        In <span style="font-style: italic;">The 28th International Conference on Computational Linguistics</span> (COLING), 2020. <a href=https://www.aclweb.org/anthology/2020.coling-main.563/''>[Paper]</a><br/>
         </p>
         <p>
           <li>Logic-guided Semantic Representation Learning for Zero-Shot Relation Classification</li>
           Juan Li, Ruoxu Wang, <b>Ningyu Zhang</b>, Wen Zhang, Fan Yang, Huajun Chen</br>
-        In <span style="font-style: italic;">The 28th International Conference on Computational Linguistics</span> (COLING), 2020. <a href=''>[Paper]</a><br/>
+        In <span style="font-style: italic;">The 28th International Conference on Computational Linguistics</span> (COLING), 2020. <a href='https://www.aclweb.org/anthology/2020.coling-main.265/'>[Paper]</a><br/>
         </p>
         <p>
           <li>Summarizing Chinese  Medical Answer with Graph Convolution Networks and Question-focused Dual Attention </li>
           <b>Ningyu Zhang</b>, Shumin Deng, Juan Li, Xi Chen, Wei Zhang, Huajun Chen</br>
-        In <span style="font-style: italic;">Findings of EMNLP</span> (EMNLP), 2020. <a href=''>[Paper]</a><br/>
+        In <span style="font-style: italic;">Findings of EMNLP</span> (EMNLP), 2020. <a href='https://www.aclweb.org/anthology/2020.findings-emnlp.2/'>[Paper]</a><br/>
         </p>
         <p>
           <li>OpenUE: An Open Toolkit of Universal  Extraction from Text</li>
           <b>Ningyu Zhang</b>, Shumin Deng, Zhen Bi, Haiyang Yu, Jiacheng Yang, Mosha Chen, Fei Huang, Wei Zhang, Huajun Chen</br>
-        In <span style="font-style: italic;">Proceddings of the Conference on Empirical Methods in Natural Language Processing</span> (EMNLP demo), 2020. <a href=''>[Paper]</a><br/>
+        In <span style="font-style: italic;">Proceddings of the Conference on Empirical Methods in Natural Language Processing</span> (EMNLP demo), 2020. <a href='https://www.aclweb.org/anthology/2020.emnlp-demos.1/'>[Paper]</a><br/>
         </p>
         <p>
           <li>Relation Adversarial Network for Low Resource Knowledge Graph Completion </li>
