--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <p>
           <li>Bridging Text and Knowledge with Multi-Prototype Embedding for Few-Shot Relational Triple Extraction</li>
           Haiyang Yu, <b>Ningyu Zhang</b>, Shumin Deng, Hongbin Ye, Wei Zhang, Huajun Chen</br>
-        In <span style="font-style: italic;">The 28th International Conference on Computational Linguistics</span> (COLING), 2020. <a href=https://www.aclweb.org/anthology/2020.coling-main.563/''>[Paper]</a><br/>
+        In <span style="font-style: italic;">The 28th International Conference on Computational Linguistics</span> (COLING), 2020. <a href=https://www.aclweb.org/anthology/2020.coling-main.563/'>[Paper]</a><br/>
         </p>
         <p>
           <li>Logic-guided Semantic Representation Learning for Zero-Shot Relation Classification</li>
