--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
       <h3><font color = 'black'>Publications</font></h3>
       <!--<h4>Conference papers:</h4>-->
         <p>
+          <li>Noisy-Labeled NER with Confidence Estimation</li>
+          Kun Liu, Yao Fu, Chuanqi Tan, Mosha Chen, <b>Ningyu Zhang</b>, Songfang Huang, Sheng Gao</br>
+          In <span style="font-style: italic;">Proceedings of the Annual Conference of the North American Chapter of the Association for Computational Linguistics</span> (NAACL), 2021.<a href=''>[Paper]</a> <br/>
+        </p>
+        <p>
+          <li>Field Embedding: A Unified Grain-Based Framework for Word Representation</li>
+          Junjie Luo, Xi Chen, Jichao Sun, YueJia Xiang, <b>Ningyu Zhang</b>, Xiang Wan</br>
+          In <span style="font-style: italic;">Proceedings of the Annual Conference of the North American Chapter of the Association for Computational Linguistics</span> (NAACL), 2021.<a href=''>[Paper]</a> <br/>
+        </p>
+        <p>
           <li>Contrastive Triple Extraction with Generative Transformer</li>
           Hongbin Ye, <b>Ningyu Zhang</b>, Shumin Deng, Mosha Chen, Chaunqi Tan, Fei Huang, Huajun Chen</br>
         In <span style="font-style: italic;">The 35th AAAI Conference on Artificial Intelligence</span> (AAAI), 2021. <a href='https://arxiv.org/pdf/2009.06207.pdf'>[Paper]</a><br/>
